# python_school

./: .gitignore  README.md  pyproject.toml  simple_df
src/python_school/: __init__.py
src/python_school.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python_school/challenges/: longest_common_prefix.py  roman_to_integer.py  two_sum.py
src/python_school/models/: __init__.py  base_model.py
src/python_school/models/data_types/: __init__.py  list_type.py
src/python_school/models/numpy/: core_concepts.py
src/python_school/models/pandas/: pd_core_concepts.py
src/python_school/services/: __init__.py  yfinance_service.py
tests/challenges/: test_longest_common_prefix.py
tests/models/data_types/: test_list_type.py
