[build-system]
requires = [
    "setuptools>=69",
    "wheel>=0.43",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-school"
version = "0.1.0"
description = "Educational utilities, models, and helpers for the python_school package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Phani Kumar Mashetti" },
]
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pytest-cov-html>=4.1",
    "pre-commit>=3.7"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_school*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "N"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_optional = true
mypy_path = ["src"]
